--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
 	"name": "preview-branches-with-cloudflare",
 	"scripts": {
-		"dev": "wrangler dev",
-		"deploy": "wrangler deploy --minify",
+		"dev": "run-p dev:*",
+		"dev:wrangler": "wrangler pages dev dist --live-reload",
+		"dev:esbuild": "esbuild --bundle src/index.ts --format=esm --watch --outfile=dist/_worker.js",
+		"build": "esbuild --bundle src/index.ts --format=esm --outfile=dist/_worker.js",
+		"preview": "wrangler pages dev",
+		"deploy": "$npm_execpath run build && wrangler pages deploy ./dist",
 		"cf-typegen": "wrangler types --env-interface CloudflareBindings",
 		"db:seed": "bun run ./src/lib/db/seed.ts",
 		"db:generate": "drizzle-kit generate --config=./src/lib/db/config.ts",
@@ -18,6 +22,7 @@
 		"@cloudflare/workers-types": "^4.20240806.0",
 		"dotenv": "^16.4.5",
 		"drizzle-kit": "^0.24.0",
+		"npm-run-all": "^4.1.5",
 		"wrangler": "^3.57.2"
 	}
 }
